move about section before speakers

--- a/index.html
+++ b/index.html
@@ -78,8 +78,78 @@ title: Home
   <!--end of 2nd modal-->
 </div>
 
+<div class="full-width speaker-section">
+</div>
 
-<div class="full-width speaker-section" id="speakers-row">
+<div class="row" id="about-row">
+  <div class="large-12 columns">
+    <a name="about"></a>
+    <h2 data-magellan-destination="about">About</h2>
+    <p class="lead">
+      Level Up is a creative tech conference that explores the process of
+      creating and shipping modern software products. The conference will
+      feature practical experience by industry experts, over two days,
+      covering four themes; ideate, design, build, and launch.
+      Join us to meet interesting people, make new friends, and learn new
+      skills you can show off at home.
+    </p>
+    <p class="lead"><strong>Tickets are extremely limited.</strong></p>
+  </div>
+  <hr>
+</div>
+<div class="row">
+  <div class="medium-4 columns infoblock">
+    <h5 class="workshop">Topical Topics</h5>
+    <h6>Show &amp; tell: personalized</h6>
+    <p class="medium">
+      A wide range of topics will be explored including everything from server side javascript, to cutting edge trends in design. Plenty of time will be allotted after each talk for questions and discussion.
+    </p>
+  </div>
+  <div class="medium-4 columns infoblock">
+    <h5 class="experience">An Intimate Experience</h5>
+    <h6>Guaranteed to meet new people</h6>
+    <p class="medium">
+      Top down we've designed Level Up to be an inspirational experience. The venue is walking distance from both the hotel and a vibrant downtown district where you can eat, shop, or grab a beer at any one of several dozen local pubs.
+    </p>
+  </div>
+  <div class="medium-4 columns infoblock">
+    <h5 class="powerpacked">Power Packed</h5>
+    <h6>Prepare for a knowledge bomb</h6>
+    <p class="medium">
+      Talks will be short and focused; each between 30 &amp; 55 minutes long. Each speaker will have full knowledge of those that present before them, and will build off the concepts conveyed by previous speakers.
+    </p>
+  </div>
+</div>
+<div class="row">
+  <div class="medium-4 columns infoblock">
+    <h5 class="crosstrain">Cross Train</h5>
+    <h6>Twice the speakers for your buck.</h6>
+    <p class="medium">
+      The wide range of topics selected for Level Up are purposefully varied in subject, but share a common theme; each are practical and immediately applicable to your everyday work.
+    </p>
+  </div>
+  <div class="medium-4 columns infoblock">
+    <h5 class="food">Good Eats</h5>
+    <h6>Savor the Saratoga flavor</h6>
+    <p class="medium">
+      It's a fact: an engaged mind can burn a lot of calories. Local foodies will prepare lunch and snacks each day to ensure you’re properly satiated (and hydrated!).
+    </p>
+  </div>
+  <div class="medium-4 columns infoblock">
+    <h5 class="location">Beauty Abounds</h5>
+    <h6>Spend a few days at the springs</h6>
+    <p class="medium">
+      Enjoy the beautiful historic resort town of Saratoga during the peak of
+       <a href='https://www.google.com/search?q=new+york+fall+leaves&amp;espv=210&amp;es_sm=119&amp;source=lnms&amp;tbm=isch&amp;sa=X&amp;ei=C0_ZUrO_DPe0sATAzoDQAw&amp;ved=0CAcQ_AUoAQ&amp;biw=1920&amp;bih=1008'>New York's Fall Season</a> (and if you enjoy the outdoors,
+      you're only 30 minutes from the <a href='http://visitadirondacks.com/'>largest park</a> in the continental U.S.).
+    </p>
+  </div>
+    <br>
+    <hr>
+    <br>
+</div>
+
+<div id="speakers-row">
   <div class="row">
     <div class="large-12 columns">
       <a name="speakers"></a>
@@ -539,71 +609,6 @@ title: Home
       </ul>
     </div>
     <hr>
-  </div>
-</div>
-
-<div class="row" id="about-row">
-  <div class="large-12 columns">
-    <a name="about"></a>
-    <h2 data-magellan-destination="about">About</h2>
-    <p class="lead">
-      Level Up is a creative tech conference that explores the process of
-      creating and shipping modern software products. The conference will
-      feature practical experience by industry experts, over two days,
-      covering four themes; ideate, design, build, and launch.
-      Join us to meet interesting people, make new friends, and learn new
-      skills you can show off at home.
-    </p>
-    <p class="lead"><strong>Tickets are extremely limited.</strong></p>
-  </div>
-  <hr>
-</div>
-<div class="row">
-  <div class="medium-4 columns infoblock">
-    <h5 class="workshop">Topical Topics</h5>
-    <h6>Show &amp; tell: personalized</h6>
-    <p class="medium">
-      A wide range of topics will be explored including everything from server side javascript, to cutting edge trends in design. Plenty of time will be allotted after each talk for questions and discussion.
-    </p>
-  </div>
-  <div class="medium-4 columns infoblock">
-    <h5 class="experience">An Intimate Experience</h5>
-    <h6>Guaranteed to meet new people</h6>
-    <p class="medium">
-      Top down we've designed Level Up to be an inspirational experience. The venue is walking distance from both the hotel and a vibrant downtown district where you can eat, shop, or grab a beer at any one of several dozen local pubs.
-    </p>
-  </div>
-  <div class="medium-4 columns infoblock">
-    <h5 class="powerpacked">Power Packed</h5>
-    <h6>Prepare for a knowledge bomb</h6>
-    <p class="medium">
-      Talks will be short and focused; each between 30 &amp; 55 minutes long. Each speaker will have full knowledge of those that present before them, and will build off the concepts conveyed by previous speakers.
-    </p>
-  </div>
-</div>
-<div class="row">
-  <div class="medium-4 columns infoblock">
-    <h5 class="crosstrain">Cross Train</h5>
-    <h6>Twice the speakers for your buck.</h6>
-    <p class="medium">
-      The wide range of topics selected for Level Up are purposefully varied in subject, but share a common theme; each are practical and immediately applicable to your everyday work.
-    </p>
-  </div>
-  <div class="medium-4 columns infoblock">
-    <h5 class="food">Good Eats</h5>
-    <h6>Savor the Saratoga flavor</h6>
-    <p class="medium">
-      It's a fact: an engaged mind can burn a lot of calories. Local foodies will prepare lunch and snacks each day to ensure you’re properly satiated (and hydrated!).
-    </p>
-  </div>
-  <div class="medium-4 columns infoblock">
-    <h5 class="location">Beauty Abounds</h5>
-    <h6>Spend a few days at the springs</h6>
-    <p class="medium">
-      Enjoy the beautiful historic resort town of Saratoga during the peak of
-       <a href='https://www.google.com/search?q=new+york+fall+leaves&amp;espv=210&amp;es_sm=119&amp;source=lnms&amp;tbm=isch&amp;sa=X&amp;ei=C0_ZUrO_DPe0sATAzoDQAw&amp;ved=0CAcQ_AUoAQ&amp;biw=1920&amp;bih=1008'>New York's Fall Season</a> (and if you enjoy the outdoors,
-      you're only 30 minutes from the <a href='http://visitadirondacks.com/'>largest park</a> in the continental U.S.).
-    </p>
   </div>
 </div>
 
