--- a/index.html
+++ b/index.html
@@ -373,6 +373,22 @@ title: Home
           <img src="/img/heroku-logo.png" class="supporters-logo" alt="Heroku">
         </li>
 
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
+                <a href="https://twitter.com/tiffbogich" class="twitter-icon" target="_blank">@tiffbogich</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://www.standardanalytics.io/" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/tiffany-bogich.jpg" alt="Tiffany Bogich">
+            </div>
+            <br>
+            <figcaption>Tiffany Bogich</figcaption>
+            <figcaption class="speaker-title">Founder, Standard Analytics</figcaption>
+          </figure>
+          <img src="/img/sa-logo.png" class="supporters-logo" alt="Standard Analytics">
+        </li>
 
         <!-- <li class="center">
           <figure class="speaker">
