--- a/index.html
+++ b/index.html
@@ -472,6 +472,19 @@ title: Home
       <li class="center">
         <figure class="supporters">
           <div class="avatar">
+            <div class="supporters-links none">
+
+              <img src="/img/lu-icon.png" class="lu-icon">
+              <a href="http://www.adirondacktrust.com" class="link-icon" target="_blank">Website</a>
+            </div>
+            <img src="/img/adk-trust-logo.png" alt="Adirondack Trust">
+          </div>
+        </figure>
+      </li>
+
+      <li class="center">
+        <figure class="supporters">
+          <div class="avatar">
             <div class="supporters-links">
               <a href="https://twitter.com/CommerceHub" class="twitter-icon" target="_blank">@CommerceHub</a>
               <img src="/img/lu-icon.png" class="lu-icon">
@@ -548,7 +561,7 @@ title: Home
         </figure>
       </li>
 
-      <li class="center">
+      <!-- <li class="center">
         <figure class="supporters">
           <div class="avatar">
             <div class="supporters-links">
@@ -559,7 +572,7 @@ title: Home
             <img src="/img/noom-logo.png" alt="Noom">
           </div>
         </figure>
-      </li>
+      </li> -->
 
       <li class="center">
         <figure class="supporters">
@@ -608,6 +621,32 @@ title: Home
               <a href="http://www.pinnaclerecruiters.com" class="link-icon" target="_blank">Website</a>
             </div>
             <img src="/img/pinnacle-logo.png" alt="Pinnacle">
+          </div>
+        </figure>
+      </li>
+
+      <li class="center">
+        <figure class="supporters">
+          <div class="avatar">
+            <div class="supporters-links">
+              <a href="https://twitter.com/AutoMateDMS" class="twitter-icon" target="_blank">@AutoMateDMS</a>
+              <img src="/img/lu-icon.png" class="lu-icon">
+              <a href="http://www.automate.com" class="link-icon" target="_blank">Website</a>
+            </div>
+            <img src="/img/automate-logo.png" alt="Auto/Mate">
+          </div>
+        </figure>
+      </li>
+
+      <li class="center">
+        <figure class="supporters">
+          <div class="avatar">
+            <div class="supporters-links">
+              <a href="https://twitter.com/hackupstate" class="twitter-icon" target="_blank">@hackupstate</a>
+              <img src="/img/lu-icon.png" class="lu-icon">
+              <a href="http://hackupstate.com" class="link-icon" target="_blank">Website</a>
+            </div>
+            <img src="/img/hack-upstate.png" alt="Hack Upstate">
           </div>
         </figure>
       </li>
