Added wordpress, changed swag number

--- a/index.html
+++ b/index.html
@@ -489,24 +489,11 @@ title: Home
         <figure class="supporters">
           <div class="avatar">
             <div class="supporters-links">
-              <a href="https://twitter.com/WarnerBrosEnt" class="twitter-icon" target="_blank">@WarnerBrosEnt</a>
+              <a href="https://twitter.com/WordPress" class="twitter-icon" target="_blank">@WordPress</a>
               <img src="/img/lu-icon.png" class="lu-icon">
-              <a href="http://www.warnerbros.com" class="link-icon" target="_blank">Website</a>
+              <a href="http://wordpress.org" class="link-icon" target="_blank">Website</a>
             </div>
-            <img src="/img/wb-logo.png" alt="Warner Brothers Entertainment">
-          </div>
-        </figure>
-      </li>
-
-      <li class="center">
-        <figure class="supporters">
-          <div class="avatar">
-            <div class="supporters-links">
-              <a href="https://twitter.com/turbine" class="twitter-icon" target="_blank">@turbine</a>
-              <img src="/img/lu-icon.png" class="lu-icon">
-              <a href="http://www.turbine.com" class="link-icon" target="_blank">Website</a>
-            </div>
-            <img src="/img/turbine-logo.png" alt="Turbine">
+            <img src="/img/wordpress-logo.png" alt="Wordpress">
           </div>
         </figure>
       </li>
