added suny new media sponsor

--- a/index.html
+++ b/index.html
@@ -628,6 +628,19 @@ title: Home
         </figure>
       </li>
 
+      <li class="center">
+        <figure class="supporters">
+          <div class="avatar">
+            <div class="supporters-links">
+              <a href="https://twitter.com/sunyadirondack" class="twitter-icon" target="_blank">@sunyadirondack</a>
+              <img src="/img/lu-icon.png" class="lu-icon">
+              <a href="http://www.sunyacc.edu/academics/programs/newmedia" class="link-icon" target="_blank">Website</a>
+            </div>
+            <img src="/img/new-media-suny-logo.png" alt="SUNY: New Media">
+          </div>
+        </figure>
+      </li>
+
       <!--
         <li class="center">
           <figure class="supporters">
@@ -648,7 +661,7 @@ title: Home
   <div class="large-12 columns">
     <a name="schedule"></a>
     <h2 data-magellan-destination="schedule">Schedule</h2>
-    
+
     <div class="row">
       <div class="medium-6 columns first-day">
         <h3>Wednesday</h3>
@@ -659,7 +672,7 @@ title: Home
               <div class="time show-for-small-only">
                 <img src="/img/times/{{ slot.time }}.png" alt="{{ slot.time }}">
               </div>
-              
+
               <img src="{{ slot.image }}" class="{% if slot.section %}speaker{% else %}icon{% endif %}">
 
               {% if slot.section %}<div class="section">{{ slot.section }}</div>{% endif %}
