replaced tiff with matthew

--- a/index.html
+++ b/index.html
@@ -382,17 +382,17 @@ title: Home
           <figure class="speaker">
             <div class="avatar">
               <div class="speaker-links">
-                <a href="https://twitter.com/tiffbogich" class="twitter-icon" target="_blank">@tiffbogich</a>
+                <a href="https://twitter.com/DataMiller" class="twitter-icon" target="_blank">@DataMiller</a>
                 <img src="/img/lu-icon.png" class="lu-icon">
-                <a href="http://www.standardanalytics.io/" class="link-icon" target="_blank">Website</a>
+                <a href="http://www.commercehub.com/" class="link-icon" target="_blank">Website</a>
             </div>
-              <img src="/img/tiffany-bogich.jpg" alt="Tiffany Bogich">
+              <img src="/img/matthew-miller.jpg" alt="Matthew Miller">
             </div>
             <br>
-            <figcaption>Tiffany Bogich</figcaption>
-            <figcaption class="speaker-title">Founder, Standard Analytics</figcaption>
+            <figcaption>Matthew Miller</figcaption>
+            <figcaption class="speaker-title">Software Architect, CommerceHub</figcaption>
           </figure>
-          <img src="/img/sa-logo.png" class="supporters-logo" alt="Standard Analytics">
+          <img src="/img/commerce-hub.png" class="supporters-logo" alt="CommerceHub">
         </li>
 
       </ul>
