added fairwinds to sponsors

--- a/index.html
+++ b/index.html
@@ -641,6 +641,19 @@ title: Home
         </figure>
       </li>
 
+      <li class="center">
+        <figure class="supporters">
+          <div class="avatar">
+            <div class="supporters-links">
+              <a href="https://twitter.com/fairwinds" class="twitter-icon" target="_blank">@fairwinds</a>
+              <img src="/img/lu-icon.png" class="lu-icon">
+              <a href="http://www.fairwindspartners.com" class="link-icon" target="_blank">Website</a>
+            </div>
+            <img src="/img/fairwinds-logo.png" alt="FairWinds Partners">
+          </div>
+        </figure>
+      </li>
+
       <!--
         <li class="center">
           <figure class="supporters">
