changed sabrina, added kenneth and mitch

--- a/index.html
+++ b/index.html
@@ -297,15 +297,15 @@ title: Home
           <figure class="speaker">
             <div class="avatar">
               <div class="speaker-links">
-                <a href="https://twitter.com/PatrickAmbron" class="twitter-icon" target="_blank">@PatrickAmbron</a>
+                <a href="https://twitter.com/brandyourself" class="twitter-icon" target="_blank">@brandyourself</a>
                 <img src="/img/lu-icon.png" class="lu-icon">
-                <a href="http://patrickambron.brandyourself.com" class="link-icon" target="_blank">Website</a>
+                <a href="http://sabrinaclark.brandyourself.com" class="link-icon" target="_blank">Website</a>
             </div>
-              <img src="/img/patrick-ambron.jpg" alt="Patrick Ambron">
+              <img src="/img/sabrina-clark.jpg" alt="Sabrina Clark">
             </div>
             <br>
-            <figcaption>Patrick Ambron</figcaption>
-            <figcaption class="speaker-title">Co-founder &amp; CEO of BrandYourself</figcaption>
+            <figcaption>Sabrina Clark</figcaption>
+            <figcaption class="speaker-title">Director of Marketing at BrandYourself</figcaption>
           </figure>
           <img src="/img/brandyourself.png" class="supporters-logo" alt="BrandYourself">
         </li>
@@ -393,6 +393,39 @@ title: Home
             <figcaption class="speaker-title">Software Architect, CommerceHub</figcaption>
           </figure>
           <img src="/img/commerce-hub.png" class="supporters-logo" alt="CommerceHub">
+        </li>
+
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
+                <a href="https://twitter.com/UpstateVC" class="twitter-icon" target="_blank">@DataMiller</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://hackupstate.com/" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/mitch-patterson.png" alt="Mitch Patterson">
+            </div>
+            <br>
+            <figcaption>Mitch Patterson</figcaption>
+            <figcaption class="speaker-title">Co-Founder @hackupstate</figcaption>
+          </figure>
+          <img src="/img/hackupstate-logo.png" class="supporters-logo" alt="CommerceHub">
+        </li>
+
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links none">
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://esd.ny.gov/AboutUs/Leadership.html" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/kenneth-adams.png" alt="Mitch Patterson">
+            </div>
+            <br>
+            <figcaption>Kenneth Adams</figcaption>
+            <figcaption class="speaker-title">President & NYSED http://esd.ny.gov/index.html</figcaption>
+          </figure>
+          <img src="/img/empire-state-dev-logo.png" class="supporters-logo" alt="CommerceHub">
         </li>
 
       </ul>
