--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ title: Home
             </div>
             <br>
             <figcaption>Kenneth Adams</figcaption>
-            <figcaption class="speaker-title">President & NYSED http://esd.ny.gov/index.html</figcaption>
+            <figcaption class="speaker-title">President & NYSED</figcaption>
           </figure>
           <img src="/img/empire-state-dev-logo.png" class="supporters-logo" alt="CommerceHub">
         </li>
