replaces ian with james

--- a/index.html
+++ b/index.html
@@ -178,17 +178,16 @@ title: Home
 
             <div class="avatar">
               <div class="speaker-links">
-                <a href="https://twitter.com/ianlandsman" class="twitter-icon" target="_blank">@ianlandsman</a>
+                <a href="https://twitter.com/jruffer" class="twitter-icon" target="_blank">@jruffer</a>
                 <img src="/img/lu-icon.png" class="lu-icon">
-                <a href="http://ianlandsman.com" class="link-icon" target="_blank">Website</a>
+                <a href="http://paay.co" class="link-icon" target="_blank">Website</a>
             </div>
-              <img src="/img/ian-landsman.jpg" alt="Ian Landsman">
+              <img src="/img/james-ruffer.png" alt="James Ruffer">
             </div>
             <br>
-            <figcaption>Ian Landsman</figcaption>
-            <figcaption class="speaker-title">Founder of UserScape</figcaption>
+            <figcaption>James Ruffer</figcaption>
+            <figcaption class="speaker-title">Co-founder of PAAY</figcaption>
           </figure>
-          <img src="/img/userscape.png" class="supporters-logo">
         </li>
 
         <li class="center">
