--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ title: Home
             <figcaption>James Ruffer</figcaption>
             <figcaption class="speaker-title">Co-founder of PAAY</figcaption>
           </figure>
+          <img src="/img/paay.png" class="supporters-logo">
         </li>
 
         <li class="center">
