changed wordpress.org to wordpress.com

--- a/index.html
+++ b/index.html
@@ -522,9 +522,9 @@ title: Home
         <figure class="supporters">
           <div class="avatar">
             <div class="supporters-links">
-              <a href="https://twitter.com/WordPress" class="twitter-icon" target="_blank">@WordPress</a>
+              <a href="https://twitter.com/wordpressdotcom" class="twitter-icon" target="_blank">@WordPressdotcom</a>
               <img src="/img/lu-icon.png" class="lu-icon">
-              <a href="http://wordpress.org" class="link-icon" target="_blank">Website</a>
+              <a href="http://wordpress.com" class="link-icon" target="_blank">Website</a>
             </div>
             <img src="/img/wordpress-logo.png" alt="Wordpress">
           </div>
